Fix footer vertical alignment

--- a/src/styles/BasePage.scss
+++ b/src/styles/BasePage.scss
@@ -3,7 +3,7 @@
 .mainContainer {
   padding: $layout-gutter;
   font-family: $font-default;
-  max-width: 50rem;
+  max-width: $layout-max-width;
   margin-left: auto;
   margin-right: auto;
 }
